kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  namespace: weather-namespace
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      #nodePort: 30000
    #type: NodePort
  type: ClusterIP
